<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        style="@style/estiloPaisCard">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <!-- Imágenes de bandera y emblema del país -->
            <LinearLayout
                android:id="@+id/linlayImagenes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:orientation="horizontal"
                android:gravity="center">
                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/ivBandera"
                    android:importantForAccessibility="no"
                    android:layout_width="200dp"
                    android:layout_height="133dp"
                    app:shapeAppearanceOverlay="@style/esquinasRedondas"
                    tools:src="@drawable/unsc"/>
                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/ivEmblema"
                    android:importantForAccessibility="no"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="20dp"
                    app:shapeAppearanceOverlay="@style/esquinasRedondas"
                    tools:src="@drawable/equiponoble"/>
            </LinearLayout>

            <!-- Textos con datos del país -->
            <LinearLayout
                android:id="@+id/linlayTextos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/linlayImagenes"
                android:layout_marginTop="25dp"
                android:orientation="vertical"
                android:gravity="start">
                <TextView
                    android:id="@+id/tvNombrePais"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/estiloNombrePais"
                    tools:text="@string/nombre"/>
                <TextView
                    android:id="@+id/tvPoblacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/estiloRestoTextos"
                    tools:text="@string/poblacion"/>
                <TextView
                    android:id="@+id/tvCapital"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/estiloRestoTextos"
                    tools:text="@string/capital"
                    android:textStyle="italic"/>
                <TextView
                    android:id="@+id/tvDivisa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/estiloRestoTextos"
                    tools:text="@string/divisa" />
                <TextView
                    android:id="@+id/tvTlfno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/estiloRestoTextos"
                    tools:text="@string/telefono" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</FrameLayout>